--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ resources/*.momd
 resources/*.storyboardc
 vendor/Pods
 vendor/Podfile.lock
+vendor/**/build-*
 app/testflight_launcher.rb
 resources/AirshipConfig.plist
 .DS_Store
