--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,11 @@
 export TESTFLIGHT_APP_TOKEN=
 export TESTFLIGHT_API_TOKEN=
 export TESTFLIGHT_TEAM_TOKEN=
+
+export APPLE_PROVISIONING_PROFILE_PATH=
+export APPLE_DEVELOPER_NAME=
+export APPLE_COMPANY_NAME=
+export APNS_ENVIRONMENT=
+
+export PARSE_APP_ID=
+export PARSE_CLIENT_KEY=
